--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,8 @@ a {
 
 #form--contact input,
 #form--contact textarea,
-#topbar .menu,#btn__contact-submit {
+#topbar .menu,
+#btn__contact-submit {
     /* border-radius: 10px; */
     /* border: 1px solid #aa8c8e; */
     background-image: linear-gradient(150deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.8));
@@ -98,6 +99,11 @@ a {
 
 /* 頁首區 */
 #topbar {
+    position: fixed;
+    /* 固定定位，不會跟著卷軸走 */
+    z-index: 999;
+    width: 100%;
+    /* 固定定位會抓內容尺寸，要自己設定寬度 */
     /* ID用# */
     display: flex;
     /* 預設主軸為水平 */
@@ -106,7 +112,7 @@ a {
     padding: 30px;
     align-items: center;
     /* 副軸(垂直)置中 */
-    background-color: #8f6668;
+    /* background-color: #8f6668; */
 }
 
 .logo {
@@ -233,6 +239,7 @@ section {
     /* 再轉垂直排 */
     align-items: center;
     /* 水平字中 */
+    margin-bottom: 30px;
 }
 
 .title h2 {
@@ -252,9 +259,37 @@ section {
     line-height: 2.5rem;
 }
 
+.box__list {
+    width: 80%;
+    display: flex;
+    margin: 15px;
+}
+
+.box__list .item {
+    flex: 1;
+    margin: 0 15px;
+}
+
+.box__list .item h1 {
+    font-size: 1.3rem;
+    font-weight: 600;
+}
+
+.box__list .item p {
+    font-size: 1rem;
+text-align: justify;/* 齊行，建議中文使用，英文是單字間距均分，建議不要使用 */
+}
+
+
+
+/* 最新消息區 */
+
 /* 聯絡我們 */
 
 #content {
+    position: relative;
+    /* 專門做為absloute的定位依據 */
+    overflow: hidden;
     /* 背景影像基本設定 */
     background-image: url(../images/bg_contact.jpg);
     background-size: cover;
@@ -264,10 +299,32 @@ section {
     background-attachment: fixed;
 }
 
+/* 裝飾花 */
+.flower_r {
+    position: absolute;
+    /* 絕對定位 */
+    left: -50px;
+    bottom: 100px;
+    width: 400px;
+    transform: rotate(30deg);
+}
+
+
+/* 裝飾花 */
+.flower_w {
+    position: absolute;
+    /* 絕對定位 */
+    right: -50px;
+    top: 150px;
+    transform: rotate(-50deg);
+}
+
 #form--contact {
     display: flex;
-    flex-direction: column;/* 主軸(垂直) */
-    align-items: center;/* 副軸(水平)字中 */
+    flex-direction: column;
+    /* 主軸(垂直) */
+    align-items: center;
+    /* 副軸(水平)字中 */
     width: 35%;
     font-family: 'Noto Sans TC', sans-serif;
 }
@@ -326,19 +383,25 @@ section {
 #btn__contact-submit {
     /* position: relative; */
     /* outline: none; */
-    /* text-decoration: none; */ /* 取消文字底線 */
-    border-radius: 50px;/* 定義起始位置 */
+    /* text-decoration: none; */
+    /* 取消文字底線 */
+    border-radius: 50px;
+    /* 定義起始位置 */
     display: flex;
     justify-content: center;
-    align-items: center;/* 指標樣式 */
-    cursor: pointer;/* 指標樣式：手形狀 */
-    /* text-transform: uppercase; */  /* 設定字母大寫 */
+    align-items: center;
+    /* 指標樣式 */
+    cursor: pointer;
+    /* 指標樣式：手形狀 */
+    /* text-transform: uppercase; */
+    /* 設定字母大寫 */
     height: 60px;
     width: 210px;
-    /* opacity: 1; */  /* 透明度 */
+    /* opacity: 1; */
+    /* 透明度 */
     /* ↓↓取笑button預設值↓↓ */
     background-color: transparent;
-    border:none;
+    border: none;
 }
 
 #btn__contact-submit span {
@@ -346,7 +409,8 @@ section {
     font-size: 0.85rem;
     font-weight: 700;
     letter-spacing: 1rem;
-    padding-left: 1rem;/* 把字補回到正中間 */
+    padding-left: 1rem;
+    /* 把字補回到正中間 */
 }
 
 #btn__contact-submit:hover {
