--- a/SASS練習/WEB/導入/SCSS/style.css
+++ b/SASS練習/WEB/導入/SCSS/style.css
@@ -49,7 +49,68 @@ a {
   color: var(--deep);
 }
 
+/* 色彩規範 */
+#form--contact input,
+#form--contact textarea,
+#topbar .menu,
+#btn__contact-submit {
+  /* 玻璃擬態效果 */
+  background-image: linear-gradient(150deg, #f3e4e4);
+  /* ↓↓取消表單元件的預設被景色↓↓ */
+  background-color: #efdbdb;
+  backdrop-filter: blur(5px);
+}
+
 /* 整份檔案內容全部匯入 */
-.navigation {
-  color: #8f6b6d;
+#form--contact input,
+#form--contact textarea,
+#topbar .menu,
+#btn__contact-submit {
+  width: 100%;
+  border-radius: 10px;
+  padding: 6px;
+}
+
+#btn__contact-submit {
+  border-radius: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  height: 60px;
+  width: 210px;
+  background-color: transparent;
+  border: 6px, solid, #777;
+}
+
+.icon .icon-ig {
+  background-image: url(../images/icon-ig.svg);
+}
+.icon .icon-ig:hover {
+  background-image: url(../images/icon-ig-hover.svg);
+}
+.icon .icon-line {
+  background-image: url(../images/icon-line.svg);
+}
+.icon .icon-line:hover {
+  background-image: url(../images/icon-line-hover.svg);
+}
+
+#topbar {
+  position: fixed;
+  z-index: 999;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 30px;
+  border: 1px, solid, red;
+}
+
+section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 100vh;
 }/*# sourceMappingURL=style.css.map */
